tests/parser_samples/valid/microinstruction.mas
%i i1 {
        a @l1;
        a | b | c @l2;
        a;
        b | c;
}