tests/parser_samples/invalid/multiline_macros_def/2.mas
%m a {
    a;
    b;

%i fake_i {
    a;
}